--- a/css/global.css
+++ b/css/global.css
@@ -25,4 +25,5 @@ body {
     justify-content: center;
     flex-direction: column;
     background-color:var(--color-pupple);
+    overflow: hidden;
 }
